<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/container"
        tools:context=".MainActivity">

        <Switch
            android:id="@+id/switchDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/dark_mode" />

        <TextView
            android:id="@+id/changingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="60dp"
            android:text="@string/your_text_will_be_here"
            android:textColor="@color/gray"
            android:textSize="20dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_text"
            android:textColorHint="@color/gray"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:baselineAligned="false">

            <Button
                android:id="@+id/button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/press_me"
                />

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:text="@string/toggle_button"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

        </LinearLayout>

        <TextView
            android:id="@+id/checkBoxTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sentence_choice"
            android:textAlignment="center"
            android:textStyle="italic"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/best_app"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cool_app"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>

        <Button
            android:id="@+id/btnNextWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jump_next_app_screen"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>

        </LinearLayout>

</ScrollView>