<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".SecondActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:inputType="text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:inputType="number"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pass"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:inputType="textPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mail"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:inputType="text"/>

        <CalendarView
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"/>

        <Button
            android:id="@+id/btnJumpBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jump_back"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"/>

    </LinearLayout>

</ScrollView>